--- a/html/index.html
+++ b/html/index.html
@@ -40,12 +40,12 @@
         </div>
     </div>
     </nav>
-    <main class="mt-5 container-lg">
+    <main class="mt-5 container-lg" id="main">
         <h2 class="text-center fs-1">Productos</h2>
         <div class="d-md-flex justify-content-md-center mt-5 ">
             <form id="selectCat" class="card col-md-8 bg-light p-5">
-                <div>
-                    <label for="categorias" class="form-label">Categoría</label>
+                <div id="categorias-select">
+                    <label for="categorias" class="form-label">Categoría:</label>
                     <select id="categorias" class="form-select">
 
                     </select>
@@ -81,12 +81,12 @@
                 </div>
                 <div class="col-md-6">
                     <label for="validationDefault04" class="form-label">Imagen</label>
-                    <input type="text" class="form-control" id="validationDefault04" value="" required title="Imagen"
+                    <input type="txt" class="form-control" id="validationDefault04" value="" required title="Imagen"
                         placeholder="Imagen">
                     <div class="invalid-feedback">This field is not valid.</div>
                     <div class="valid-feedback">ok.</div>
                 </div>
-
+                <div id="mensajes"></div>
                 <!-- <select id="selectCategoria"></select> -->
                 <div class="col-12">
                     <button type="button" id="create" class="btn btn-primary">Create</button>
